--- a/src/css/TableRow.module.scss
+++ b/src/css/TableRow.module.scss
@@ -12,7 +12,7 @@
     @include row_between_center;
 
     &_selection {
-      width: 20%;
+      width: 15%;
       height: 100%;
       display: -webkit-box;
       display: -ms-flexbox;
@@ -34,6 +34,10 @@
     }
     &_data_item {
       width: 100%;
+
+      &:nth-child(1) {
+        width: 125%;
+      }
 
       &:nth-child(2) {
         width: 120%;
