--- a/src/css/TableSettingsMenu.module.scss
+++ b/src/css/TableSettingsMenu.module.scss
@@ -2,10 +2,15 @@
 @import "../sass/variables";
 
 .TableSettingsMenu {
+  display: block;
   position: fixed;
-  max-width: 100vw;
+  top: 50%;
+  left: 50%;
+  width: 90vw;
   height: 60rem;
   padding: 2rem 4rem;
+  margin-top: -30rem;
+  margin-left: -45vw;
 
   &_inner {
     display: grid;
@@ -29,4 +34,8 @@
       outline: none;
     }
   }
+}
+
+.openSettings {
+  display: block;
 }
